[GTK] Fix build on Clang https://bugs.webkit.org/show_bug.cgi?id=300332

Reviewed by Adrian Perez de Castro.

Update how the baseURL creation and path checking works to avoid g_str_has_* functions,
preventing any unsafe buffer usage

* Source/WebKit/UIProcess/Extensions/gtk/WebExtensionGtk.cpp:
(WebKit::WebExtension::WebExtension):

Canonical link: https://commits.webkit.org/301160@main